test-files/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-nginx
  labels:
    app: dummy
  namespace: traefik
spec:
  containers:
    - name: dummy-nginx
      image: nginx
      ports:
        - containerPort: 8080
