test-files/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: dummy
