test-files/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.localhost`) && (PathPrefix(`/nginx`))
    kind: Rule
    services:
    - name: whoami
      port: 80
